changed the style to make it easier

--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 </head>
 <body>
   <div class="container">
-    <div class="snap">
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam, esse saepe. Dolorem harum odio ea illo ullam. Consequuntur quas, asperiores distinctio error vitae praesentium omnis beatae esse assumenda explicabo doloremque!</p>
+    <div class="snap" id="plum">
+      <p>one.</p>
     </div>
-    <div class="snap">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus quisquam sapiente animi voluptas mollitia vero ea aliquid expedita praesentium quia recusandae fugiat eligendi molestias, corporis voluptate officia odio eum facere!</p>
+    <div class="snap" id="blue">
+      <p>two.</p>
     </div>
-    <div class="snap">
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam placeat, laudantium, animi tempora voluptatem esse officia, quae similique amet velit molestiae sunt in accusantium? Eaque mollitia impedit itaque unde consequatur.</p>
+    <div class="snap" id="yellow">
+      <p>three.</p>
     </div>
-    <div class="snap">
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero nam, aut quos explicabo tempore aliquam expedita magnam nisi iusto voluptatem sit, ex, amet impedit sed ipsa labore ullam temporibus assumenda!</p>
+    <div class="snap" id="green">
+      <p>four.</p>
     </div>
-    <div class="snap">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, consequuntur quae numquam repudiandae quis saepe ullam corporis culpa eligendi hic ducimus et, placeat nisi aperiam aliquid blanditiis, iste eum eius?</p>
+    <div class="snap" id="orange">
+      <p>five.</p>
     </div>
   </div>
 </body>
